--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^8.0.0",
     "dotenv-flow": "^0.4.0",
     "fortnite": "^4.3.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
     "ms": "^2.1.2"
   }
 }
