--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "dotenv": "^8.0.0",
     "dotenv-flow": "^0.4.0",
     "fortnite": "^4.3.2",
+    "fortnite-publicapi": "^1.0.0",
     "fs": "0.0.1-security",
     "ms": "^2.1.2",
-    "fortnite-publicapi": "^1.0.0"
+    "node-schedule": "^1.3.2"
   }
 }
