--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "blaki.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
     "fortnite-publicapi": "^1.0.0",
     "fs": "0.0.1-security",
     "ms": "^2.1.2",
+    "sync-request": "^6.0.0",
     "node-schedule": "^1.3.2"
   }
 }
