--- a/blakiconfig.json
+++ b/blakiconfig.json
@@ -1,4 +1,5 @@
 {
     "prefix": "!",
-    "modrole": "🔨 » DISCORD ADMIN"
+    "modrole": "🔨 » DISCORD ADMIN",
+    "avatar": "https://i.imgur.com/zI5ggq0.png"
 }
