--- a/blakiconfig.json
+++ b/blakiconfig.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
     "modrole": "🔨 » DISCORD ADMIN",
-    "avatar": "https://i.imgur.com/zI5ggq0.png"
+    "avatar": "https://i.imgur.com/6Ew0Bza.png"
 }
